<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="CharacterDetailActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color_4"
    android:padding="10dp">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_of_character_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_book"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:singleLine="true">
            </TextView>

            <ImageView
                android:id="@+id/character_image_view"
                android:layout_width="275dp"
                android:layout_height="275dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/status_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/species"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/species_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/gender_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:text="@string/origin"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/origin_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/location_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/episodes"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/episodes_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/created_at"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/created_at_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>